package it.diem.unisa.musicmanager.model;

public enum Genre {

    POP,
    ROCK,
    HIPHOP,
    EDM,
    JAZZ,
    CLASSICAL,
    REGGAE,
    DISCO,
    METAL,
    FUNK,
    INDIE,
    COUNTRY,
    RAP,
    PUNK,
    UNKNOWN

}
